# dab-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/dab-cli/: Cargo.toml
crates/dab-cli/src/: convert_iq.rs  diag_ibits.rs  fic_iq.rs  lib.rs  main.rs  msc_iq.rs
crates/dab-cli/tests/: k8b_v4_fic_iq.rs
crates/dab-descramble/: Cargo.toml
crates/dab-descramble/src/: lib.rs
crates/dab-eti/: Cargo.toml
crates/dab-eti/src/: lib.rs
crates/dab-fec/: Cargo.toml
crates/dab-fec/src/: interleaver.rs  lib.rs  outer.rs  rs.rs
crates/dab-fec/tests/: golden.rs
crates/dab-fic/: Cargo.toml
crates/dab-fic/src/: crc.rs  ensemble.rs  fig.rs  lib.rs  tables.rs
crates/dab-fic/tests/: golden.rs
crates/dab-iq/: Cargo.toml
crates/dab-iq/src/: error.rs  format.rs  lib.rs  metadata.rs  reader.rs
crates/dab-msc/: Cargo.toml
crates/dab-msc/src/: lib.rs
crates/dab-ofdm/: Cargo.toml
crates/dab-ofdm/src/: channel_eq.rs  cp_sync.rs  dqpsk_demap.rs  fft.rs  freq_interleaver.rs  integer_cfo.rs  lib.rs  nco.rs  null_detect.rs  params.rs  phasereference.rs  phasetable.rs  resampler.rs  symbol_fft.rs
crates/dab-ofdm/tests/: k8b_rust_ofdm_stage12.rs  k8b_v4_ofdm_chain.rs
crates/dab-viterbi/: Cargo.toml
crates/dab-viterbi/examples/: encode_dump.rs  verify_expected_soft.rs
crates/dab-viterbi/src/: eep.rs  fic.rs  lib.rs  tables.rs  viterbi.rs
docs/diag/: README.md  SLICE14_CAPTURE.md  airspy-sanity.sh  arg_r_heatmap.py  compare_demap.py  cp_autocorr_manual.py  eti-stuff-dumps-all.patch  eti-stuff-fic-handler-dump.patch  eti-stuff-ibits-dump.patch  eti_to_expected_soft.py  fft_bin_compare.py  fft_by_pos.py  fft_input_check.py  per_bin_phase.py  scan_alignment.py  sync_pos_compare.py  synth_ofdm.py  transform_bisect.py  verify_back_derive.py  viterbi_bits_diff.py  viterbi_cross_check.py  viterbi_spiral_cli.cpp  viterbi_unit_diff.py
tests/golden/: k8b_100pct_rs_result.json
