[package]
name = "dab-iq"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "File-based raw I/Q reader (Cs8 / Cs16Le / Cf32Le) with JSON sidecar metadata. Roadmap: Week 3a; libairspy FFI in Week 4+."

[dependencies]
num-complex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
