[package]
name = "dab-ofdm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "DAB Mode I OFDM demodulator — main contribution. Roadmap: Week 3-5."

[dependencies]
rustfft.workspace = true
num-complex.workspace = true

[dev-dependencies]
dab-iq.workspace = true
